--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="profile-placeholder">
-                    <i class="fas fa-user"></i>
-                </div>
+                <img src="images/hero-profile.png" alt="Shahriar Ferdoush Sifat" class="profile-image" loading="lazy">
             </div>
         </div>
         <div class="scroll-indicator">
@@ -76,9 +74,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <div class="profile-placeholder-large">
-                        <i class="fas fa-user"></i>
-                    </div>
+                    <img src="images/hero-profile.png" alt="Shahriar Ferdoush Sifat" class="profile-image-large" loading="lazy">
                 </div>
                 <div class="about-text">
                     <p class="about-intro">
