--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
           <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
         <div class="nav-controls">
-          <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
+          <button
+            class="theme-toggle"
+            id="theme-toggle"
+            aria-label="Toggle theme"
+          >
             <div class="theme-toggle-slider">
               <i class="fas fa-sun theme-toggle-icon"></i>
             </div>
@@ -80,6 +84,13 @@
             </a>
             <a href="mailto:shahriar.ss1212@gmail.com" aria-label="Email">
               <i class="fas fa-envelope"></i>
+            </a>
+            <a
+              href="https://www.youtube.com/@ShahriarFerdoush"
+              target="_blank"
+              aria-label="YouTube"
+            >
+              <i class="fab fa-youtube"></i>
             </a>
           </div>
         </div>
@@ -686,6 +697,10 @@
               >
                 <i class="fab fa-linkedin"></i>
                 <span>LinkedIn</span>
+              </a>
+              <a href="mailto:shahriar.ss1212@gmail.com" class="social-btn">
+                <i class="fas fa-envelope"></i>
+                <span>Email</span>
               </a>
             </div>
           </div>
