edge browser fix

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
             src="images/profile/hero-profile.png"
             alt="Shahriar Ferdoush Sifat"
             class="profile-image"
+            width="350"
+            height="350"
             loading="lazy"
           />
         </div>
@@ -118,6 +120,8 @@
               src="images/profile/hero-profile.png"
               alt="Shahriar Ferdoush Sifat"
               class="profile-image-large"
+              width="450"
+              height="450"
               loading="lazy"
             />
           </div>
