--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
             src="images/profile/hero-profile.png"
             alt="Shahriar Ferdoush Sifat"
             class="profile-image"
-            width="350"
-            height="350"
+            width="280"
+            height="280"
             loading="lazy"
           />
         </div>
@@ -115,25 +115,19 @@
       <div class="container">
         <h2 class="section-title">About Me</h2>
         <div class="about-content">
-          <div class="about-image">
-            <img
-              src="images/profile/hero-profile.png"
-              alt="Shahriar Ferdoush Sifat"
-              class="profile-image-large"
-              width="450"
-              height="450"
-              loading="lazy"
-            />
-          </div>
-          <div class="about-text">
-            <p class="about-intro">
-              I am a Computer Science and Engineering graduate from BUET with a
-              passion for
-              <strong>Artificial Intelligence</strong> and
-              <strong>Machine Learning</strong>, particularly focused on Large
-              Language Models.
-            </p>
-            <div class="about-details">
+          <div class="about-left">
+            <!-- <div class="about-image">
+              <img
+                src="images/profile/hero-profile.png"
+                alt="Shahriar Ferdoush Sifat"
+                class="profile-image-large"
+                width="350"
+                height="350"
+                loading="lazy"
+              />
+            </div> -->
+
+            <div class="about-education">
               <div class="detail-item">
                 <i class="fas fa-graduation-cap"></i>
                 <div>
@@ -145,22 +139,17 @@
                   <p class="detail-sub">July 2024</p>
                 </div>
               </div>
-              <div class="detail-item">
-                <i class="fas fa-map-marker-alt"></i>
-                <div>
-                  <h3>Location</h3>
-                  <p>Dhaka, Bangladesh</p>
-                </div>
-              </div>
-              <div class="detail-item">
-                <i class="fas fa-trophy"></i>
-                <div>
-                  <h3>Achievements</h3>
-                  <p>Dean's Award, BUET (2020)</p>
-                  <p>Regional Champion, Bangladesh Physics Olympiad (2016)</p>
-                </div>
-              </div>
             </div>
+          </div>
+
+          <div class="about-text">
+            <p class="about-intro">
+              I am a Computer Science and Engineering graduate from BUET with a
+              passion for <strong>Artificial Intelligence</strong> and
+              <strong>Machine Learning</strong>, particularly focused on Large
+              Language Models.
+            </p>
+            <!-- Add more content here as needed -->
           </div>
         </div>
       </div>
@@ -635,6 +624,33 @@
             >
               <i class="fas fa-check-circle"></i> Verify Certificate
             </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Achievements Section -->
+    <section id="achievements" class="achievements section section-dark">
+      <div class="container">
+        <h2 class="section-title">Achievements & Awards</h2>
+        <div class="achievements-grid">
+          <div class="achievement-card">
+            <div class="achievement-icon">
+              <i class="fas fa-trophy"></i>
+            </div>
+            <h3>Dean's Award</h3>
+            <p class="achievement-org">
+              Bangladesh University of Engineering and Technology (BUET)
+            </p>
+            <p class="achievement-year">2020</p>
+          </div>
+          <div class="achievement-card">
+            <div class="achievement-icon">
+              <i class="fas fa-medal"></i>
+            </div>
+            <h3>Regional Champion</h3>
+            <p class="achievement-org">Bangladesh Physics Olympiad</p>
+            <p class="achievement-year">2016</p>
           </div>
         </div>
       </div>
