better compact design

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
             Full-Stack Software Engineer & AI/ML Researcher
           </p>
           <p class="hero-description">
-            Building intelligent systems with Large Language Models and modern
-            web technologies
+            I am a Computer Science and Engineering graduate from BUET with a
+            passion for <strong>Artificial Intelligence</strong> and
+            <strong>Machine Learning</strong>, particularly focused on Large
+            Language Models.
           </p>
           <div class="hero-buttons">
             <a href="#contact" class="btn btn-primary">Get in Touch</a>
@@ -111,49 +113,23 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about section">
+    <!-- <section id="about" class="about section">
       <div class="container">
         <h2 class="section-title">About Me</h2>
-        <div class="about-content">
-          <div class="about-left">
-            <!-- <div class="about-image">
-              <img
-                src="images/profile/hero-profile.png"
-                alt="Shahriar Ferdoush Sifat"
-                class="profile-image-large"
-                width="350"
-                height="350"
-                loading="lazy"
-              />
-            </div> -->
-
-            <div class="about-education">
-              <div class="detail-item">
-                <i class="fas fa-graduation-cap"></i>
-                <div>
-                  <h3>Education</h3>
-                  <p>B.Sc. in Computer Science and Engineering</p>
-                  <p class="detail-sub">
-                    Bangladesh University of Engineering and Technology (BUET)
-                  </p>
-                  <p class="detail-sub">July 2024</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="about-text">
-            <p class="about-intro">
-              I am a Computer Science and Engineering graduate from BUET with a
-              passion for <strong>Artificial Intelligence</strong> and
-              <strong>Machine Learning</strong>, particularly focused on Large
-              Language Models.
-            </p>
-            <!-- Add more content here as needed -->
-          </div>
+        <div class="about-content-full">
+          <p class="about-intro">
+            I am a Computer Science and Engineering graduate from BUET with a
+            passion for <strong>Artificial Intelligence</strong> and
+            <strong>Machine Learning</strong>, particularly focused on Large
+            Language Models.
+          </p>
+          <p class="about-intro">
+            [Add more about your research interests, career goals, and what
+            drives your passion for AI/ML here]
+          </p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Research/Thesis Section -->
     <section id="research" class="research section section-dark">
@@ -229,8 +205,32 @@
       </div>
     </section>
 
+    <!-- Education Section -->
+    <section id="education" class="education section">
+      <div class="container">
+        <h2 class="section-title">Education</h2>
+        <div class="education-content">
+          <div class="education-card">
+            <div class="education-icon">
+              <i class="fas fa-graduation-cap"></i>
+            </div>
+            <div class="education-details">
+              <h3>B.Sc. in Computer Science and Engineering</h3>
+              <p class="education-institution">
+                Bangladesh University of Engineering and Technology (BUET)
+              </p>
+              <p class="education-date">Graduated: July 2024</p>
+              <p class="education-location">
+                <i class="fas fa-map-marker-alt"></i> Dhaka, Bangladesh
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Experience Section -->
-    <section id="experience" class="experience section">
+    <section id="experience" class="experience section section-dark">
       <div class="container">
         <h2 class="section-title">Experience</h2>
         <div class="timeline">
