github visuals added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><a href="#home" class="nav-link">Home</a></li>
           <li><a href="#about" class="nav-link">About</a></li>
           <li><a href="#experience" class="nav-link">Experience</a></li>
+          <li><a href="#github-contributions" class="nav-link">GitHub</a></li>
           <li><a href="#projects" class="nav-link">Projects</a></li>
           <li><a href="#skills" class="nav-link">Skills</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -305,6 +306,122 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- GitHub Contributions Section -->
+    <section id="github-contributions" class="github-contributions section">
+      <div class="container">
+        <h2 class="section-title">GitHub Activity</h2>
+        <!-- <p class="section-subtitle">
+          My open source contributions and coding activity
+        </p> -->
+
+        <!-- GitHub Stats Cards -->
+        <!-- <div class="github-stats-grid">
+          <div class="github-stat-card">
+            <div class="stat-icon">
+              <i class="fas fa-code-branch"></i>
+            </div>
+            <div class="stat-content">
+              <h3 class="stat-number" id="total-commits">Loading...</h3>
+              <p class="stat-label">Total Commits</p>
+            </div>
+          </div>
+
+          <div class="github-stat-card">
+            <div class="stat-icon">
+              <i class="fas fa-code-pull-request"></i>
+            </div>
+            <div class="stat-content">
+              <h3 class="stat-number" id="pull-requests">Loading...</h3>
+              <p class="stat-label">Pull Requests</p>
+            </div>
+          </div>
+
+          <div class="github-stat-card">
+            <div class="stat-icon">
+              <i class="fas fa-circle-exclamation"></i>
+            </div>
+            <div class="stat-content">
+              <h3 class="stat-number" id="issues">Loading...</h3>
+              <p class="stat-label">Issues</p>
+            </div>
+          </div>
+
+          <div class="github-stat-card">
+            <div class="stat-icon">
+              <i class="fas fa-star"></i>
+            </div>
+            <div class="stat-content">
+              <h3 class="stat-number" id="total-stars">Loading...</h3>
+              <p class="stat-label">Total Stars</p>
+            </div>
+          </div>
+        </div> -->
+
+        <!-- GitHub Contribution Graph -->
+        <div class="github-graph-section">
+          <div class="graph-header">
+            <h3>Contribution Activity</h3>
+            <span class="contribution-count" id="contribution-count"
+              >Loading contributions...</span
+            >
+          </div>
+          <div class="github-graph-container">
+            <img
+              id="contribution-chart"
+              src="https://ghchart.rshah.org/0071e3/Shahriar-Ferdoush"
+              alt="Shahriar Ferdoush's GitHub Contribution Chart"
+              class="github-chart"
+            />
+            <div class="year-selector">
+              <label for="contribution-year">Year:</label>
+              <select id="contribution-year" class="year-dropdown">
+                <option value="last">Last Year</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <!-- GitHub Profile Stats -->
+        <div class="github-profile-stats">
+          <div class="profile-stat-card">
+            <img
+              src="https://github-readme-stats.vercel.app/api?username=Shahriar-Ferdoush&show_icons=true&theme=default&hide_border=true&bg_color=ffffff&title_color=0071e3&icon_color=0071e3&text_color=1d1d1f"
+              alt="GitHub Stats"
+              class="github-stats-img"
+            />
+          </div>
+
+          <div class="profile-stat-card">
+            <img
+              src="https://github-readme-stats.vercel.app/api/top-langs/?username=Shahriar-Ferdoush&layout=compact&theme=default&hide_border=true&bg_color=ffffff&title_color=0071e3&text_color=1d1d1f"
+              alt="Most Used Languages"
+              class="github-stats-img"
+            />
+          </div>
+        </div>
+
+        <!-- GitHub Streak Stats -->
+        <div class="github-streak-section">
+          <img
+            src="https://github-readme-streak-stats.herokuapp.com/?user=Shahriar-Ferdoush&theme=default&hide_border=true&background=ffffff&ring=0071e3&fire=0071e3&currStreakLabel=1d1d1f&sideLabels=1d1d1f&currStreakNum=0071e3&sideNums=0071e3"
+            alt="GitHub Streak Stats"
+            class="github-streak-img"
+          />
+        </div>
+
+        <!-- View Profile Button -->
+        <div class="github-profile-link">
+          <a
+            href="https://github.com/Shahriar-Ferdoush"
+            target="_blank"
+            class="btn btn-primary"
+          >
+            <i class="fab fa-github"></i> View Full GitHub Profile
+          </a>
         </div>
       </div>
     </section>
