Fix GitHub Activity section styling and add cache busting

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Shahriar Ferdoush Sifat - Full-Stack Software Engineer & AI/ML Researcher"
     />
     <title>Shahriar Ferdoush Sifat | Portfolio</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?v=2.0" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -853,6 +853,6 @@
       </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=2.0"></script>
   </body>
 </html>
