--- a/index.html
+++ b/index.html
@@ -773,8 +773,31 @@
       </div>
     </section>
 
+    <!-- YouTube Videos Section -->
+    <section id="youtube" class="youtube-section section">
+      <div class="container">
+        <h2 class="section-title">Featured YouTube Videos</h2>
+        <div class="youtube-videos-grid" id="youtube-videos">
+          <!-- Loading state -->
+          <div class="video-loading">
+            <i class="fab fa-youtube"></i>
+            <p>Loading videos...</p>
+          </div>
+        </div>
+        <div class="youtube-channel-link">
+          <a
+            href="https://www.youtube.com/@ShahriarFerdoush"
+            target="_blank"
+            class="btn btn-primary"
+          >
+            <i class="fab fa-youtube"></i> Visit My YouTube Channel
+          </a>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
-    <section id="contact" class="contact section">
+    <section id="contact" class="contact section section-dark">
       <div class="container">
         <h2 class="section-title">Get In Touch</h2>
         <p class="contact-subtitle">
